--- a/to-do/todo-app11/sass/main.scss
+++ b/to-do/todo-app11/sass/main.scss
@@ -1,4 +1,7 @@
 $color-white: #fff;
+$background-color1: rgb(15, 141, 232);
+$background-color2: rgb(11, 219, 238);
+$background-color3: rgb(96, 242, 181);
 
 *,
 *::before,
@@ -15,6 +18,20 @@ html {
 body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.main {
+  background-image: linear-gradient(
+      to left,
+      rgba($background-color1, 0.8),
+      rgba($background-color2, 0.8),
+      rgba($background-color3, 0.8)
+    ),
+    url("https://images.squarespace-cdn.com/content/v1/56dc7a6820c647a2ce55e533/1490922056592-HPNM6WPT5IP9EISLWSWO/Instructional-courses-ascent-climbing-school.jpg");
+  background-size: cover;
+  clip-path: polygon(3% 0, 100% 0%, 97% 100%, 0% 100%);
+  height: 100vh;
+  margin: 1rem;
 }
 
 fieldset {
