--- a/to-do/todo-app11/css/styles.css
+++ b/to-do/todo-app11/css/styles.css
@@ -6,7 +6,7 @@
   padding: 0; }
 
 html {
-  font-size: 100%; }
+  font-size: 110%; }
 
 body {
   font-family: "Georgia", serif; }
@@ -27,6 +27,22 @@ body {
   width: 85vw;
   height: 75vh;
   margin: 0 auto; }
+
+.pad-vert {
+  padding-top: 1rem;
+  padding-bottom: 1rem; }
+
+.pad-input {
+  padding: 0.25rem 1rem 0.25rem 1rem; }
+
+.side-mar {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem; }
+
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; }
 
 fieldset {
   border: none;
