--- a/to-do/todo-app11/sass/main.scss
+++ b/to-do/todo-app11/sass/main.scss
@@ -12,7 +12,7 @@ $background-color3: rgb(96, 242, 181);
 }
 
 html {
-  font-size: 100%;
+  font-size: 110%;
 }
 
 body {
@@ -43,6 +43,26 @@ body {
   width: 85vw;
   height: 75vh;
   margin: 0 auto;
+}
+
+.pad-vert {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.pad-input {
+  padding: 0.25rem 1rem 0.25rem 1rem;
+}
+
+.side-mar {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 fieldset {
