--- a/to-do/todo-app11/sass/main.scss
+++ b/to-do/todo-app11/sass/main.scss
@@ -45,18 +45,22 @@ body {
   margin: 0 auto;
 }
 
-.pad-vert {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+#summary {
+  margin-left: 0.75rem;
+}
+
+.side-mar {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .pad-input {
   padding: 0.25rem 1rem 0.25rem 1rem;
 }
 
-.side-mar {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+.pad-vert {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .search {
@@ -65,12 +69,19 @@ body {
   justify-content: flex-start;
 }
 
-fieldset {
-  border: none;
-  display: flex;
-}
-
-label {
+.label {
   display: flex;
   align-items: center;
+}
+
+#all-todos ul {
+  list-style: none;
+}
+
+#all-todos ul li {
+  margin: 0.5rem 0;
+}
+
+#all-todos ul li span {
+  margin: 0.5rem;
 }
